Tue Dec 11 18:55:16 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtklabel.c (gtk_label_mnemonic_activate): Small fix to let
	mnemonics work with notebooks.

Tue Dec 11 15:25:06 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): Change
	bin_window to be located at y=TREE_VIEW_HEADER_HEIGHT(tree_view).
	Makes some flicker while scrolling go away.

2001-12-11  Michael Natterer  <mitch@gimp.org>

	* demos/testpixbuf-save.c: added new keyboard shortcut 'a' which
	adds alpha to the pixbuf; re-load the saved pixbuf and
	pixel-by-pixel compare it with the original one.

Tue Dec 11 15:39:08 2001  Soeren Sandmann  <sandmann@daimi.au.dk>

	* ChangeLog: Fix wrong ChangeLog entry
	* gtk/gtkstyle.c (gtk_default_draw_shadow_gap): Fix drawing of top
	right corner

2001-12-10  jacob berkman  <jacob@ximian.com>

	* gdk/x11/gdkinput-xfree.c (_gdk_input_grab_pointer): 
	* gdk/x11/gdkmain-x11.c (gdk_pointer_grab): 
	(gdk_keyboard_grab): do not grab things if the nograb debug flag
	is set

	* gdk/gdkinternals.h: 
	* gdk/gdk.c: add nograbs debug flag to disable grabs of the
	keyboard / mouse

Mon Dec 10 19:42:29 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (validate_rows_handler): stupid bug where I
	didn't reset the timer.

2001-12-10  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkcontainer.c (gtk_container_child_type): Close comment.

2001-12-09  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkviewport.c: Add docs.

Mon Dec 10 16:21:38 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkrbtree.c (_fixup_parity): New function to fixup parity.
	RBTree corruption bug--

2001-12-10  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtktreeview.c (gtk_tree_view_remove_widget): Return
	if edited_column is NULL, also grab focus before removing
	the cell_editable.

Sun Dec 09 15:06:51 2001  George Lebl <jirka@5z.com>

	* gtk/gtkrange.c (gtk_range_calc_layout): check for 0 value on the